# oumi

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  STYLE_GUIDE.md  USAGE.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: doctests.yaml  gcp_artifacts.yaml  gpu_tests.yaml  pretest.yaml  release_gcp.yaml  release_pypi.yaml
configs/: README.md  phi3.dpo.mac.32g.yaml  phi3.dpo.nvidia.80g.yaml  phi3.lora.yaml
configs/accelerate/: deepspeed_config.json  gpt2.fsdp.yaml  llama.ddp.yaml  llama.deepspeed.yaml  llama.fsdp.mixedprec.yaml  llama.fsdp.yaml  llama70b.fsdp.yaml  llama70b.lora.yaml  llama8b.fsdp.yaml  local_machine_no_distributed_cpu_only.yaml  phi3.fsdp.dpo.yaml  sample_deepspeed_llama3.yaml  sample_fsdp.yaml  sample_fsdp_gpt2.yaml  sample_fsdp_llama3.yaml  sample_fsdp_phi3_dpo.yaml
configs/lema/: gpt2.asynceval.nvidia.yaml  gpt2.pt.mac.yaml  gpt2.pt.yaml  llama2b.pt.fsdp.yaml  llama2b.pt.yaml  llama3.8b.aya.eval.yaml  llama3.8b.aya.sft.yaml  llama70b.eval.yaml  llama70b.lora.yaml  llama70b.pt.yaml  llama70b.sft.yaml  llama8b.eval.legacy.yaml  llama8b.eval.yaml  llama8b.lora.eval.yaml  llama8b.lora.yaml  llama8b.pt.yaml  llama8b.sft.yaml  phi3.dpo.mac.32g.yaml  phi3.dpo.nvidia.24g.yaml  phi3.dpo.nvidia.80g.yaml  phi3.dpo.yaml  phi3.eval.lema.mac.yaml  phi3.eval.lema.nvidia.yaml  phi3.eval.lm_harness.mac.yaml  phi3.eval.mac.yaml  phi3.eval.nvidia.yaml  phi3.eval.yaml  phi3.lora.yaml  phi3.sft.nvidia.24g.yaml  zephyr.7b.sft.yaml
configs/oumi/: blip2_opt_2.7b.sft.yaml  gpt2.asynceval.nvidia.yaml  gpt2.pt.yaml  llama1b.eval.yaml  llama1b.infer.yaml  llama1b.sft.yaml  llama2b.pt.fsdp.oumi.yaml  llama2b.pt.fsdp.trl.yaml  llama2b.pt.fsdp.yaml  llama2b.pt.yaml  llama3.8b.aya.eval.yaml  llama3.8b.aya.sft.yaml  llama3.8b.sft.longctx.yaml  llama3b.lora.yaml  llama3b.qlora.yaml  llama3b.sft.yaml  llama70b.eval.yaml  llama70b.infer.yaml  llama70b.lora.yaml  llama70b.qlora.yaml  llama70b.sft.yaml  llama8b.eval.legacy.yaml  llama8b.eval.yaml  llama8b.lora.yaml  llama8b.qlora.yaml  llama8b.sft.yaml  llava.7b.sft.yaml  phi3.dpo.mac.32g.yaml  phi3.dpo.nvidia.24g.yaml  phi3.eval.lema.mac.yaml  phi3.eval.lm_harness.yaml  phi3.eval.oumi.mac.yaml  phi3.eval.oumi.nvidia.yaml  visionlanguage.sft.config.yaml
configs/skypilot/: sky.yaml  sky_blip2_opt_2.7b.sft.yaml  sky_chatqa.yaml  sky_eval.yaml  sky_fsdp.yaml  sky_fsdp_gpt2.yaml  sky_fsdp_phi3_dpo.yaml  sky_gpt2.yaml  sky_gpt2_eval.yaml  sky_gpt2_fsdp.yaml  sky_init.sh  sky_llama2b.yaml  sky_llama2b_ddp.yaml  sky_llama2b_deepspeed.yaml  sky_llama2b_fsdp.yaml  sky_llama3_8b_aya_eval.yaml  sky_llama3_8b_aya_sft.yaml  sky_llama70b_fsdp.yaml  sky_llama70b_lora.yaml  sky_llama70b_sft.yaml  sky_llama8b.yaml  sky_llama8b_lora.yaml  sky_llama8b_sft.yaml  sky_llava.7b.sft.yaml  sky_phi3_dpo.yaml  sky_phi3_dpo_fsdp.yaml  sky_phi3_eval.yaml  sky_ssh.yaml  sky_zephyr_7b_qlora_sft.yaml  sky_zephyr_7b_sft.yaml
data/dataset_examples/: README.md
docs/: .gitignore  CLOUD_TRAINING.md  DEV_SETUP.md  DISTRIBUTED_TRAINING.md  GIT_WORKFLOW.md  MODEL_DEFINITION.md  NEW_MULTIMODAL_DATASET.md  _doclinks.config  _docsummaries.sh  _manage_doclinks.py  _summarize_module.py  citations.bib  conf.py  index.md  index.rst  tutorials.rst
docs/.sphinx/: conf.py  index.rst  lema.builders.rst  lema.core.callbacks.rst  lema.core.configs.rst  lema.core.datasets.rst  lema.core.launcher.rst  lema.core.models.rst  lema.core.rst  lema.core.tokenizers.rst  lema.core.trainers.rst  lema.core.types.rst  lema.datasets.rst  lema.evaluation.rst  lema.launcher.clouds.rst  lema.launcher.clusters.rst  lema.launcher.rst  lema.models.rst  lema.rst  lema.utils.rst  modules.rst  tutorials.rst
docs/about/: acknowledgements.md  citations.md  license.md
docs/advanced/: custom_datasets.md  custom_models.md  custom_vl_datasets.md  customization.md  distributed_training.md  new_multimodal_dataset.md  performance_optimization.md  quantization.md
docs/api/: modules.rst  oumi.cli.rst  oumi.core.callbacks.rst  oumi.core.cli.rst  oumi.core.collators.rst  oumi.core.configs.internal.rst  oumi.core.configs.params.rst  oumi.core.configs.rst  oumi.core.inference.rst  oumi.core.processors.rst  oumi.rst  (+26 more)
notebooks/: LeMa - A Tour.ipynb  LeMa - Colab Setup Example.ipynb  LeMa - Deploying a Job.ipynb  LeMa - Finetuning Tutorial.ipynb  LeMa - Launching Jobs on Custom Clusters.ipynb  LeMa - Multinode Inference on Polaris.ipynb  LeMa - Running Jobs Remotely.ipynb  LeMa - Tuning Llama.ipynb  LeMa - Using NanoGPT.ipynb  LeMa - Using vLLM Engine for Inference.ipynb  OUMI - A Tour.ipynb  OUMI - Build Zephyr 7B.ipynb  OUMI - Colab Setup Example.ipynb  OUMI - Deploying a Job.ipynb  OUMI - Finetuning Tutorial.ipynb  OUMI - Launching Jobs on Custom Clusters.ipynb  OUMI - Multinode Inference on Polaris.ipynb  OUMI - Running Jobs Remotely.ipynb  OUMI - Tuning Llama.ipynb  OUMI - Using NanoGPT.ipynb  OUMI - Using vLLM Engine for Inference.ipynb  Oumi - A Tour.ipynb  Oumi - Colab Setup Example.ipynb  Oumi - Custom Judge.ipynb  Oumi - Datasets Tutorial.ipynb  Oumi - Deploying a Job.ipynb  Oumi - Distill a Large Model.ipynb  Oumi - Evaluation with AlpacaEval 2.0.ipynb  Oumi - Evaluation with MT Bench.ipynb  Oumi - Evaluation with Oumi.ipynb  Oumi - Finetuning Tutorial.ipynb  Oumi - Judge (Oumi): filtering a dataset.ipynb  Oumi - Launching Jobs on Custom Clusters.ipynb  Oumi - Multinode Inference on Polaris.ipynb  Oumi - Oumi Judge.ipynb  Oumi - Running Jobs Remotely.ipynb  Oumi - Training CNN on Custom Dataset.ipynb  Oumi - Tuning Llama.ipynb  Oumi - Using NanoGPT.ipynb  Oumi - Using vLLM Engine for Inference.ipynb  (+2 more)
scripts/: benchmark_trainers.sh  finetune_sft_phi3.sh  llama_e2e.py
tests/: __init__.py  conftest.py  markers.py  test_config.py  test_custom_models.py  test_evaluate.py  test_evaluate_async.py  test_infer.py  test_infer_prob.py  test_launch.py  test_mfu.py  test_registry.py  test_str_utils.py  test_torch_profiler_utils.py  test_train.py
(+1141 files in other folders)
